--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>قمة التكنولوجيا 2025</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.rtl.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200..1000&display=swap" rel="stylesheet">
     <style>
-        body { font-family: 'Tahoma', sans-serif; background-color: #fff; }
+        body { font-family: 'Cairo', sans-serif; background-color: #fff; }
         .section-title { font-weight: bold; margin-bottom: 1rem; }
         .feature-box, .speaker-box { background: #f8f9fa; border-radius: 12px; padding: 1rem; text-align: center; }
         .speaker-img { width: 100px; height: 100px; border-radius: 50%; object-fit: cover; margin: auto; }
