--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <a class="nav-link" href="#about">عن المؤتمر</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#speakers">المتحدثون المميزون</a>
+            <a class="nav-link" href="#speakers">المتحدثون </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#agenda">جدول المؤتمر</a>
@@ -66,7 +66,7 @@
 </header>
 
 <main class="container py-5">
-  <section class="mb-5">
+  <section class="mb-5" id="about">
     <h2 class="section-title text-center">عن المؤتمر</h2>
     <div class="row g-3">
       <p>
@@ -84,7 +84,7 @@
             كما سيقام معرض تقني يعرض أحدث المنتجات ووالخدمات</p>
     </div>
   </section>
-  <section class="mb-5">
+  <section class="mb-5" id="speakers">
     <h2 class="section-title text-center">المتحدثون</h2>
     <div class="row g-4 text-center">
       <div class="col-6 col-sm-3">
@@ -117,7 +117,7 @@
       </div>
     </div>
   </section>
-  <h2 class="text-center fw-bold mb-4">الجدول الزمني للمؤتمر </h2>
+  <h2 class="text-center fw-bold mb-4" id="agenda">الجدول الزمني للمؤتمر </h2>
 
   <div class="table-responsive">
     <table class="table table-bordered text-center">
