--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
         .feature-box, .speaker-box { background: #f8f9fa; border-radius: 12px; padding: 1rem; text-align: center; }
         .speaker-img { width: 100px; height: 100px; border-radius: 50%; object-fit: cover; margin: auto; }
     </style>
+    <script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "r4ijpkykr8");
+</script>
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom sticky-top">
