--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       </div>
   
       <!-- زر التسجيل دائم الظهور -->
-      <a href="#register" class="btn ms-2" style="background-color: #1E40AF; color:#fff;">التسجيل</a>
+      <a href="#register" class="btn ms-2" style="background-color: #1E40AF; color:#fff;">سجل الآن</a>
   
     </div>
   </nav>
