--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
 <main class="container py-5">
   <section class="mb-5" id="about">
-    <h2 class="section-title text-center">عن المؤتمر</h2>
+    <h2 class="section-title text-center">لماذا تحضر هذا المؤتمر</h2>
     <div class="row g-3">
       <p>
         يجمع مؤتمر التكنولوجيا والابتكار 2025 نخبة من الخبراء 
